# resolume_osc_settings

./: .gitignore  pyproject.toml
src/roset/: main.py
src/roset/consts/: resolume.py
src/roset/structs/: config_item.py  config_master.py  group_configuration.py  layer_configuration.py
src/roset/util/: convert.py
